--- a/config/common_system_params.yaml
+++ b/config/common_system_params.yaml
@@ -9,7 +9,7 @@ general:
 
   # The path of the high level semantic information of the environment
   # [TODO] - the path looks ugly, possible workaround?
-  env_database: "../../../src/visual_sgraphs/config/Environments/LuxVSD/luxvsd_seq01.json"
+  env_database: ""
 
 #################################### Marker Parameters ###########################################
 markers:
