[feat] - init custom message for fetching all walls

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,12 @@ add_service_files(
   SaveMap.srv
 )
 
+# Generate messages in the 'msg' folder
+add_message_files(
+  FILES
+  vSGraphs_AllWallsData.msg
+)
+
 generate_messages(
   DEPENDENCIES
   std_msgs
