--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,11 @@ services:
     image: vsgraphs
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Noetic.Dockerfile
+      args:
+        USERNAME: $USERNAME
+        USER_UID: 1000
+        USER_GID: 1000
     container_name: vsgraphs
     environment:
       DISPLAY: $DISPLAY
@@ -30,9 +34,21 @@ services:
       - ~/.gitconfig:/root/.gitconfig_local
       # Dev
       - /dev:/dev:rw
-      # Working dirs
-      # - [path/to/launchers]:/launchers
-      # Datasets
-      - "[dataset/path]:/root/datasets"
+      # Working Directories (** MODIFY **)
+      - "[visual_sgraphs-path]:/workspace/src/visual_sgraphs:rw"
+      # Data Directories (** MODIFY **)
+      - "[dataset-path]:/root/datasets"
     network_mode: "host"
-    command: tail -f /dev/null
+    command:
+      tail -f /dev/null
+      # Used to set correct U/G(ID) for shared folder
+    depends_on:
+      - volume-init
+  volume-init:
+    image: busybox
+    command: ["chown", "-R", "1000:1000", "/workspace/src/visual_sgraphs"]
+    volumes:
+      # Working Directories (** MODIFY **)
+      - "[visual_sgraphs-path]:/workspace/src/visual_sgraphs:rw"
+    entrypoint: ""
+    restart: "no"
