[feat] - init structure for GNN-based room detection

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: Noetic.Dockerfile
+      ssh:
+        - default
       args:
         USERNAME: $USERNAME
         USER_UID: 1000
