[fix] - quick fix link and user

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "vsgraphs_ros1",
-  "remoteUser": "root",
+  "remoteUser": "${env.USERNAME}",
   "service": "vsgraphs",
   "customizations": {
     "vscode": {
