--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,8 @@
 {
   "name": "vsgraphs_ros1",
-  "remoteUser": "${env.USERNAME}",
+  "remoteUser": "asier", // Once the container is running, attach to it as the user asier
+  //only works if that user actually exists inside the container.
+  // "remoteUser": "${env.USERNAME}",
   "service": "vsgraphs",
   "customizations": {
     "vscode": {
@@ -10,12 +12,12 @@
         "ms-vscode.cpptools",
         "ms-vscode.cpptools-themes",
         "ms-vscode.cpptools-extension-pack",
-        "ms-iot.vscode-ros",
+        //     "ms-iot.vscode-ros",
         "ms-vscode.cmake-tools",
-        "esbenp.prettier-vscode",
-        "GitHub.copilot",
-        "eamodio.gitlens",
-        "PKief.material-icon-theme"
+        // "esbenp.prettier-vscode",
+        "GitHub.copilot"
+        // "eamodio.gitlens",
+        // "PKief.material-icon-theme"
       ],
       "settings": {
         "files.associations": {
@@ -27,6 +29,6 @@
       }
     }
   },
-  "workspaceFolder": "/workspace",
+  "workspaceFolder": "/home/asier/ros2_ws",
   "dockerComposeFile": "../docker/docker-compose.yml"
 }
