--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <package>
-  <name>orb_slam3_ros</name>
-  <version>0.0.1</version>
+  <name>vs_graphs</name>
+  <version>1.2.0</version>
   <description>Visual S-Graphs (vS-Graphs) ROS-based Implementation.</description>
-  <maintainer email="a.tourani1991@gmail.com">Ali Tourani</maintainer>
+  <maintainer email="ali.tourani@uni.lu">Ali Tourani</maintainer>
+  <maintainer email="saad.ejaz@uni.lu">Saad Ejaz</maintainer>
 
   <license>BSD</license>
 
