--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 {
-  "name": "vsgraphs_ros1",
+  "name": "vsgraphs_ros_jazzy",
   "remoteUser": "asier", // Once the container is running, attach to it as the user asier
   //only works if that user actually exists inside the container.
   // "remoteUser": "${env.USERNAME}",
-  "service": "vsgraphs",
+  "service": "vsgraphs_ros2",
   "customizations": {
     "vscode": {
       "extensions": [
