--- a/package.xml
+++ b/package.xml
@@ -21,8 +21,8 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
-  <depend>aruco_ros</depend>
-  <depend>aruco_msgs</depend>
+  <!-- <depend>aruco_ros</depend>
+  <depend>aruco_msgs</depend> -->
   <depend>rviz_visual_tools</depend>
   <depend>segmenter_ros</depend>
 
